add feature post package and benefits
